# metodyprog

./: .gitignore  Dockerfile  Doxyfle  README.md  database.h  doxygen.yml  echoServer.pro  main.cpp  mytcpserver.cpp  mytcpserver.h  server_functions.cpp
client/: client.pro  client_main.cpp  singletonclient.cpp  singletonclient.h
myserver/: CMakeLists.txt  echoServer.pro  mytcpserver.cpp  mytcpserver.h
server/: database.cpp  main.cpp  mytcpserver.cpp  mytcpserver.h  server.pro  server_functions.h
